--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,15 @@
  *= require_tree .
  *= require_self
  */
+ @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+
+ body {
+  font-family: Roboto;
+  font-weight: 300;
+  padding: 40 24px;
+}
+
+h1 {
+  margin-top: 40px;
+  font-weight: 400;
+}
